kids/backend/minicluster/minicluster_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mweather-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mweather-pod
  template:
    metadata:
      labels:
        app: mweather-pod
    spec:
      containers:
      - name: miniweather
        image: taowenwei/miniweather_arm64:latest
        ports:
        - containerPort: 3000
