kids/backend/minicluster/minicluster_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mweather-svc
  labels:
    app: miniweather
spec:
  selector:
    app: mweather-pod
  ports:
    - protocol: TCP
      port: 80
      name: api
      targetPort: 3000
